<?xml version="1.0"?>
<package format="3">
  <name>carla_a2b_demo</name>
  <version>0.0.1</version>
  <description>Simple A-to-B demo for CARLA using reference path and pure pursuit.</description>

  <maintainer email="you@example.com">Ting-Chia Chen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>carla_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
