<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_planner</name>
  <version>0.0.0</version>
  <description>LLM-based global planner for CARLA and ROS2</description>

  <maintainer email="krg@todo.todo">krg</maintainer>
  <license>MIT</license>

  <!-- ROS2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- CARLA Message support -->
  <exec_depend>carla_msgs</exec_depend>

  <!-- Test dependencies (保持原样) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
